# HeatProject

./: Cargo.toml  LICENCE.txt  README.md
heat_archive/: Cargo.toml
heat_archive/src/: main.rs
heat_runtime/: Cargo.toml
heat_runtime/src/: main.rs
heatc/: Cargo.toml
heatc/src/: compiler.rs  main.rs
lib_heat_spec/: Cargo.toml
lib_heat_spec/src/: frame.rs  h_type.rs  instruction.rs  lib.rs  opcode.rs
libvirt/: Cargo.toml
libvirt/src/: constraints.rs  frame.rs  instruction.rs  interpreter.rs  lib.rs  types.rs
